--- a/pom.xml
+++ b/pom.xml
@@ -9,8 +9,11 @@
     <url>http://maven.apache.org</url>
 
     <properties>
+        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
+        <project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
         <powermock.version>1.7.0RC4</powermock.version>
     </properties>
+
 
     <dependencies>
         <dependency>
@@ -77,6 +80,14 @@
                 <directory>${basedir}/src/main/resources</directory>
                 <includes>
                     <include>**/*</include>
+                </includes>
+            </resource>
+
+            <resource>
+                <filtering>false</filtering>
+                <directory>src/main/java</directory>
+                <includes>
+                    <include>**/*.fxml</include>
                 </includes>
             </resource>
         </resources>
